--- a/src/pages/event-field-selection-menu/event-field-selection-menu.html
+++ b/src/pages/event-field-selection-menu/event-field-selection-menu.html
@@ -21,7 +21,7 @@
 <ion-content class="eventListSelection" padding>
     <ion-row>
       <ion-col >
-        <button ion-button full (click)="onSavingChanges()">Update</button>
+        <button ion-button full (click)="onSavingChanges()">Done</button>
       </ion-col>
       <ion-col >
         <button ion-button full (click)="autoSelect('selectAll')" *ngIf="!hasAllSelected"> Select All</button>
