--- a/src/pages/program-selection/program-selection.html
+++ b/src/pages/program-selection/program-selection.html
@@ -10,7 +10,7 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-<ion-content padding class = "programFormSelection">
+  <ion-content class = "programFormSelection">
 
   <ion-searchbar animated="true"  (ionInput)="getFilteredList($event)"></ion-searchbar>
   <ion-grid>
